syntax = "proto3";

package restream_events;

enum MakerActionType {
  BUY = 0;
  SELL = 1;
}

// maker_action:{maker_pk}
message MakerActionEvent {
  // The maker's address
  string maker = 1;

  // The maker's action type
  MakerActionType action = 2;

  // Transaction signature
  string signature = 3;

  // Token address
  string token = 4;

  // Token decimals
  uint32 decimals = 5;

  // Token amount in base units
  uint64 amount = 6;

  // Token price in USD
  double price_usd = 7;

  // Token price in USD
  double price_sol = 8;

  // `From` token product in USD (volume)
  double product_usd = 9;

  // `To` token product in USD (volume)
  double product_sol = 10;

  // DEX address
  string dex = 11;

  // Block slot number
  uint64 slot = 12;

  // unix timestamp (seconds)
  int64 timestamp = 13;
}
