syntax = "proto3";

package restream_events;

// price:{token}
message DexPriceEvent {
  // Token address
  string token = 1;

  // Token price in USD
  double price_usd = 2;

  // Token product in USD (volume)
  double product_usd = 3;

  // Token price in SOL
  double price_sol = 4;

  // Token product in SOL (volume)
  double product_sol = 5;

  // DEX address
  string dex = 6;

  // Block slot number
  uint64 slot = 7;

  // unix timestamp (seconds)
  int64 timestamp = 8;
}
